--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <h1 class="myname">Hi, my name is </h1>
             <h1 class="myname1">RAKESH CHIRUMALLA</h1>
             <h2>I am a Full Stack-Developer</h2>
-            <button><a class="resume" href="./resume/Rakesh Chirumalla Resume.pdf"
-                    download="rakesh chirumalla resume">Resume</a></button>
+            <button><a class="resume" href="./resume/Rakesh-Chirumalla-Resume.pdf"
+                    download="rakesh-chirumalla-resume">Resume</a></button>
 
         </div>
         <img src="https://ca.slack-edge.com/T0332T1KVA6-U034FGYNFK8-c119982cd5a5-512" alt="profile name">
