--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <h1><a href="#projectshead">Projects</a></h1>
             <h1><a href="#statistics">Statistics</a></h1>
             <h1><a href="#contacthead">Contact</a></h1>
+            <h1><a href="https://drive.google.com/file/d/1DzXCz94_VMuGeODUz4W2Ensbbt23b1jx/view?usp=sharing" target="_blank" >Resume</a></h1>
         </div>
     </div>
 
@@ -120,7 +121,7 @@
             <div class="pro1">
                 <img src="https://i.pinimg.com/originals/98/22/45/982245326a1351a370b1a69772c94cd9.png">
                 <div>
-                    <h2>Project: SSENSE</h2>
+                    <h2>Project: Ssense</h2>
                     <h2>Project Description: </h2>
                     <h3>
                         SSENSE is a global e-commerce website that features a mix of established and emerging luxury
@@ -164,6 +165,30 @@
             <div class="cs">
                 <button><a href="https://github.com/Shray07/nodestrome" target="_blank">Code</a></button>
                 <button><a href="https://bucolic-khapse-9221d3.netlify.app/" target="_blank">Live</a></button>
+            </div>
+        </div>
+
+
+        <div id="project">
+            <div class="pro1">
+                <img
+                    src="https://i.ytimg.com/vi/h-LRNnsEgtY/maxresdefault.jpg">
+                <div>
+                    <h2>Project: Crime Information Management System</h2>
+                    <h2>Project Description: </h2>
+                    <h3>
+                       Crime Information Management System (CIMS) is a software integrated application useful for police department for managing tasks like criminals details, taking citizens complaints, FIR details, Criminal Database.
+                    </h3>
+                    <h2>Tech used: </h2>
+                    <h3>
+                        This is solo project.
+                        Tech stack: Java, Mysql
+                    </h3>
+                </div>
+            </div>
+            <div class="cs">
+                <button><a href="https://github.com/Rakesh313777/sound-sink-473" target="_blank">Code</a></button>
+                <button><a href="https://drive.google.com/file/d/1qGhNOgOSjLxenluw5U6JpHN7AhiP9P6L/view?usp=sharing" target="_blank">Live</a></button>
             </div>
         </div>
 
