--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
         <h1><a href="#name">Home</a></h1>
         <div class="nav1">
             <h1><a href="#abtme">About me</a></h1>
-            <h1><a href="#techstack">Tech-Stack</a></h1>
             <h1><a href="#skill">Skills</a></h1>
             <h1><a href="#projectshead">Projects</a></h1>
-            <h1><a href="#statistics">Statistics</a></h1>
             <h1><a href="#contacthead">Contact</a></h1>
             <h1><a href="https://drive.google.com/file/d/1DzXCz94_VMuGeODUz4W2Ensbbt23b1jx/view?usp=sharing" target="_blank" >Resume</a></h1>
         </div>
@@ -230,6 +228,7 @@
     </div>
 
     <!-- Prepare a container for your calendar. -->
+    <h1 class="calhead">Calender</h1>
     <div id="gitcall">
         <div class="calendar">
             <!-- Loading stuff -->
