--- a/index.html
+++ b/index.html
@@ -125,12 +125,13 @@
                         SSENSE is a global e-commerce website that features a mix of established and emerging luxury
                         brands across womenswear, menswear, kidswear etc.
                     </h3>
-                    <h2>Tech used: </h2>
+                    <h2>Project type:</h2>
                     <h3>
                         Developed along with a team of six members in one week.
-                        Tech stack: HTML, CSS and JavaScript.
                         My task in this collaborative work is to create Products page.
                     </h3>
+                    <h2>Tech used:</h2>
+                    <h3>HTML, CSS and JavaScript.</h3>
                 </div>
             </div>
             <div class="cs">
@@ -152,12 +153,13 @@
                         Nordstromrack is aglobale-commerce website that features are mix of established and emerging
                         luxury brands across womenswear, menswear, kidswear etc.
                     </h3>
-                    <h2>Tech used: </h2>
+                    <h2>Project type: </h2>
                     <h3>
                         Developed along with a team of six members in one week.
-                        Tech stack: HTML, CSS and JavaScript.
                         My task in this collaborative work is to create Products page with sorting methods.
                     </h3>
+                    <h2>Tech used:</h2>
+                    <h3> HTML, CSS and JavaScript</h3>
                 </div>
             </div>
             <div class="cs">
@@ -177,11 +179,12 @@
                     <h3>
                        Crime Information Management System (CIMS) is a software integrated application useful for police department for managing tasks like criminals details, taking citizens complaints, FIR details, Criminal Database.
                     </h3>
-                    <h2>Tech used: </h2>
+                    <h2>Project type: </h2>
                     <h3>
                         This is solo project.
-                        Tech stack: Java, Mysql
                     </h3>
+                    <h2>Tech used: </h2>
+                    <h3>Java, Mysql,Hibernate</h3>
                 </div>
             </div>
             <div class="cs">
@@ -192,49 +195,27 @@
 
     </div>
 
-
     <div id="statistics">
         <h1>Statistics</h1>
-        <div id="statistics1">
-            <div class="st">
-                <h1 class="st1">1200+</h1>
-                <h2>Hours</h2>
-                <h2>of Full Stack Coding</h2>
-            </div>
-            <div class="st">
-                <h1 class="st1">240+</h1>
-                <h2>Hackerrank</h2>
-                <h2>problems</h2>
-            </div>
-            <div class="st">
-                <h1 class="st1">210+</h1>
-                <h2>Git</h2>
-                <h2>Commits</h2>
-            </div>
-            <div class="st">
-                <h1 class="st1">20+</h1>
-                <h2>Projects</h2>
-                <h2>Done</h2>
-            </div>
-            <div class="st">
-                <h1 class="st1">100+</h1>
-                <h2>Hours</h2>
-                <h2>of Soft skills Sessions</h2>
-            </div>
 
-
+        <div class="stats">
+            <img src="https://github-readme-streak-stats.herokuapp.com/?user=Rakesh313777&theme=blue&no-frame=true" alt="">
+                <!-- <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Rakesh313777&theme=chartreuse-dark&no-frame=true&include_all_commits=true&count_private=true&layout=compact" alt=""> -->
+                <img src="https://github-readme-stats.vercel.app/api?username=Rakesh313777&theme=blue&no-frame=true&include_all_commits=true&count_private=true" alt="">
         </div>
 
     </div>
+
+    
 
     <!-- Prepare a container for your calendar. -->
-    <h1 class="calhead">Calender</h1>
-    <div id="gitcall">
-        <div class="calendar">
-            <!-- Loading stuff -->
-            Loading the data just for you.
+        <h1 class="calhead">Calender</h1>
+        <div id="gitcall">
+            <div class="calendar">
+                <!-- Loading stuff -->
+                Loading the data just for you.
+            </div>
         </div>
-    </div>
 
 
 
