--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             </div>
             <div class="cs">
                 <button><a href="https://github.com/Rakesh313777/ssense-project" target="_blank">Code</a></button>
-                <button><a href="https://illustrious-tiramisu-a0c050.netlify.app/" target="_blank">Live</a></button>
+                <button><a href="https://dreamy-khapse-e93948.netlify.app/" target="_blank">Live</a></button>
             </div>
         </div>
 
@@ -200,8 +200,8 @@
 
         <div class="stats">
             <img src="https://github-readme-streak-stats.herokuapp.com/?user=Rakesh313777&theme=blue&no-frame=true" alt="">
+            <img src="https://github-readme-stats.vercel.app/api?username=Rakesh313777&theme=blue&no-frame=true&include_all_commits=true&count_private=true" alt="">
                 <!-- <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Rakesh313777&theme=chartreuse-dark&no-frame=true&include_all_commits=true&count_private=true&layout=compact" alt=""> -->
-                <img src="https://github-readme-stats.vercel.app/api?username=Rakesh313777&theme=blue&no-frame=true&include_all_commits=true&count_private=true" alt="">
         </div>
 
     </div>
