--- a/index.html
+++ b/index.html
@@ -40,12 +40,7 @@
 
     <div id="abtme">
         <h1>About me</h1>
-        <h3>Aspiring Java Backend Developer with a specialization
-            in Java, Spring Boot, SQL, REST APIs, Git/Github,
-            HTML, CSS, Javascript, Object-oriented, and design
-            Self-motivated and curious, with a keen interest in
-            building user-centric products. Looking forward to
-            honing my skills in a challenging work environment.
+        <h3>Aspiring back-end developer, proficient in java and related frameworks, data structures, and algorithms. Passionate about working in the software industry. Collaborative team player who is proficient in working with interdisciplinary teams and executing goal-oriented projects. Looking forward to developing products that help in making people’s lives better and becoming an integral part of an organization that helps me to grow.
         </h3>
     </div>
 
