--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             <h1><a href="#skill">Skills</a></h1>
             <h1><a href="#projectshead">Projects</a></h1>
             <h1><a href="#contacthead">Contact</a></h1>
-            <h1><a href="https://drive.google.com/file/d/1DzXCz94_VMuGeODUz4W2Ensbbt23b1jx/view?usp=sharing" target="_blank" >Resume</a></h1>
+            <h1><a href="https://drive.google.com/file/d/1DzXCz94_VMuGeODUz4W2Ensbbt23b1jx/view?usp=sharing"
+                    target="_blank">Resume</a></h1>
         </div>
     </div>
 
@@ -40,7 +41,11 @@
 
     <div id="abtme">
         <h1>About me</h1>
-        <h3>Aspiring back-end developer, proficient in java and related frameworks, data structures, and algorithms. Passionate about working in the software industry. Collaborative team player who is proficient in working with interdisciplinary teams and executing goal-oriented projects. Looking forward to developing products that help in making people’s lives better and becoming an integral part of an organization that helps me to grow.
+        <h3>Aspiring back-end developer, proficient in java and related frameworks, data structures, and algorithms.
+            Passionate about working in the software industry. Collaborative team player who is proficient in working
+            with interdisciplinary teams and executing goal-oriented projects. Looking forward to developing products
+            that help in making people’s lives better and becoming an integral part of an organization that helps me to
+            grow.
         </h3>
     </div>
 
@@ -115,79 +120,131 @@
                 <img
                     src="https://shopily-sg.s3.amazonaws.com/uploads/banners/18279/nordstrom-rack_wdgt_dt_129697c1.png">
                 <div>
-                    <h2>Project: NordStrom rack</h2>
-                    <h2>Project Description: </h2>
+                    <h2>Nordstrom rack</h2>
+                    <h2>Description: </h2>
                     <h3>
-                        Nordstromrack is aglobale-commerce website that features are mix of established and emerging
-                        luxury brands across womenswear, menswear, kidswear etc.
+                        Nordstrom rack is an ecommerce website that features a mix
+                        of established and emerging for mens, womens and kids wear.
                     </h3>
-                    <h2>Project type: </h2>
+                    <h2>Features: </h2>
                     <h3>
-                        Developed along with a team of six members in one week.
-                        My task in this collaborative work is to create Products page with sorting methods.
+                        <li>Users can sign in and sign out.</li>
+                        <li>Users can see and filter the products according to price or category.</li>
+                        <li>Admin Section from where admin can manage users and products</li>
+
                     </h3>
-                    <h2>Tech used:</h2>
-                    <h3> HTML, CSS and JavaScript</h3>
+                    <h2>Areas of Responsibility:</h2>
+                    <h3>
+                        <li>
+                            It is a group project and my responsibility is creating products
+                            page including filtering, sorting, and responsiveness.
+                        </li>
+                        <li>
+                            It took 1 week to complete the project.
+                        </li>
+                    </h3>
+                    <h2>Tech Stack:</h2>
+                    <h3> HTML | CSS | JavaScript</h3>
                 </div>
             </div>
             <div class="cs">
-                <button><a href="https://github.com/Shray07/nodestrome" target="_blank">Code</a></button>
+                <button><a href="https://github.com/Rakesh313777/nordstrom-rack" target="_blank">Code</a></button>
                 <button><a href="https://bucolic-khapse-9221d3.netlify.app/" target="_blank">Live</a></button>
             </div>
         </div>
-
-        
-        <div id="project">
-            <div class="pro1">
-                <img src="https://i.pinimg.com/originals/98/22/45/982245326a1351a370b1a69772c94cd9.png">
-                <div>
-                    <h2>Project: Ssense</h2>
-                    <h2>Project Description: </h2>
-                    <h3>
-                        SSENSE is a global e-commerce website that features a mix of established and emerging luxury
-                        brands across womenswear, menswear, kidswear etc.
-                    </h3>
-                    <h2>Project type:</h2>
-                    <h3>
-                        Developed along with a team of six members in one week.
-                        My task in this collaborative work is to create Products page.
-                    </h3>
-                    <h2>Tech used:</h2>
-                    <h3>HTML, CSS and JavaScript.</h3>
-                </div>
-            </div>
-            <div class="cs">
-                <button><a href="https://github.com/Rakesh313777/ssense-project" target="_blank">Code</a></button>
-                <button><a href="https://dreamy-khapse-e93948.netlify.app/" target="_blank">Live</a></button>
-            </div>
-        </div>
-
-
-
-
 
 
         <div id="project">
             <div class="pro1">
                 <img
-                    src="https://i.ytimg.com/vi/h-LRNnsEgtY/maxresdefault.jpg">
+                    src="https://github.com/sanuatmasai/Online_Shopping_Application/raw/main/Shopping_app_RestAPI_/Images/bus%20(2)%20(1).png">
                 <div>
-                    <h2>Project: Crime Information Management System</h2>
-                    <h2>Project Description: </h2>
+                    <h2>Online Shopping Application</h2>
+                    <h2>Description: </h2>
                     <h3>
-                       Crime Information Management System (CIMS) is a software integrated application useful for police department for managing tasks like criminals details, taking citizens complaints, FIR details, Criminal Database.
+                        <li>
+                            It is java API application developed by using springboot framework.
+                        </li>
+                        <li>
+                            It is a online shopping platform which users can buy the products.
+                        </li>
+
                     </h3>
-                    <h2>Project type: </h2>
+                    <h2>Features:</h2>
                     <h3>
-                        This is solo project.
+                        <li>
+                            Users can sign in and sign out.
+                        </li>
+                        <li>
+                            Users can select the items with different categories and also add quantity as much they
+                            want.
+                        </li>
+                        <li>
+                            Users can place orders and complete data will stored in DB.
+                        </li>
+                        <li>
+                            Admin Section from where admin can manage users and products.
+                        </li>
+
                     </h3>
-                    <h2>Tech used: </h2>
-                    <h3>Java, Mysql,Hibernate</h3>
+                    <h2>Areas of Responsibility:</h2>
+                    <h3>
+                        <li>
+                            It is a group project with team of 5 members and my resposibility
+                            is creating order controller in this project.
+                        </li>
+                        <li>
+                            It took 1 week to complete the project.
+                        </li>
+                    </h3>
+                    <h2>Tech Stack:</h2>
+                    <h3>Java | Mysql-Database | Springboot | Swagger-UI</h3>
+                </div>
+            </div>
+            <div class="cs">
+                <button><a href="https://github.com/Rakesh313777/Online_Shopping_Application"
+                        target="_blank">Code</a></button>
+                <button><a href="https://drive.google.com/file/d/15kFdafg0weSV-MUlMgkt-07jQykYIVCx/view"
+                        target="_blank">Live</a></button>
+            </div>
+        </div>
+
+
+
+
+
+
+        <div id="project">
+            <div class="pro1">
+                <img src="https://i.ytimg.com/vi/h-LRNnsEgtY/maxresdefault.jpg">
+                <div>
+                    <h2>Crime Information Management System</h2>
+                    <h2>Description: </h2>
+                    <h3>
+                        Crime Information Management System (CIMS) is a software integrated application useful for
+                        police department for managing tasks like criminals details, taking citizens complaints, FIR
+                        details, Criminal Database.
+                    </h3>
+                    <h2>Features: </h2>
+                    <h3>
+                        <li> Users can manage crime and criminal details.</li>
+                        <li>Users can search no of crimes happend by using time and date.</li>
+                        <li>Users can search particular crimedetails by using placename.</li>
+
+                    </h3>
+                    <h2>Areas of Responsibility:</h2>
+                    <h3>
+                        <li>It is a solo project and iam responsible for all the functionalities.</li>
+                        <li>It took 3 days to complete project.</li>
+                    </h3>
+                    <h2>Tech Stack: </h2>
+                    <h3>Java | Mysql-Database | Hibernate | Jdbc </h3>
                 </div>
             </div>
             <div class="cs">
                 <button><a href="https://github.com/Rakesh313777/sound-sink-473" target="_blank">Code</a></button>
-                <button><a href="https://drive.google.com/file/d/1qGhNOgOSjLxenluw5U6JpHN7AhiP9P6L/view?usp=sharing" target="_blank">Live</a></button>
+                <button><a href="https://drive.google.com/file/d/1qGhNOgOSjLxenluw5U6JpHN7AhiP9P6L/view?usp=sharing"
+                        target="_blank">Live</a></button>
             </div>
         </div>
 
@@ -197,23 +254,25 @@
         <h1>Statistics</h1>
 
         <div class="stats">
-            <img src="https://github-readme-streak-stats.herokuapp.com/?user=Rakesh313777&theme=blue&no-frame=true" alt="">
-            <img src="https://github-readme-stats.vercel.app/api?username=Rakesh313777&theme=blue&no-frame=true&include_all_commits=true&count_private=true" alt="">
-                <!-- <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Rakesh313777&theme=chartreuse-dark&no-frame=true&include_all_commits=true&count_private=true&layout=compact" alt=""> -->
+            <img src="https://github-readme-streak-stats.herokuapp.com/?user=Rakesh313777&theme=blue&no-frame=true"
+                alt="">
+            <img src="https://github-readme-stats.vercel.app/api?username=Rakesh313777&theme=blue&no-frame=true&include_all_commits=true&count_private=true"
+                alt="">
+            <!-- <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=Rakesh313777&theme=chartreuse-dark&no-frame=true&include_all_commits=true&count_private=true&layout=compact" alt=""> -->
         </div>
 
     </div>
 
-    
+
 
     <!-- Prepare a container for your calendar. -->
-        <h1 class="calhead">Calender</h1>
-        <div id="gitcall">
-            <div class="calendar">
-                <!-- Loading stuff -->
-                Loading the data just for you.
-            </div>
+    <h1 class="calhead">Calender</h1>
+    <div id="gitcall">
+        <div class="calendar">
+            <!-- Loading stuff -->
+            Loading the data just for you.
         </div>
+    </div>
 
 
 
