--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                         <li>It took 3 days to complete project.</li>
                     </h3>
                     <h2>Tech Stack: </h2>
-                    <h3>Java | Mysql-Database | Hibernate | Jdbc </h3>
+                    <h3>Java | Mysql-Database | Jdbc-drivers | Mysql-connector </h3>
                 </div>
             </div>
             <div class="cs">
