--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
             <div class="cs">
                 <button><a href="https://github.com/Rakesh313777/nordstrom-rack" target="_blank">Code</a></button>
-                <button><a href="https://bucolic-khapse-9221d3.netlify.app/" target="_blank">Live</a></button>
+                <button><a href="https://magenta-salmiakki-259e9a.netlify.app/" target="_blank">Live</a></button>
             </div>
         </div>
 
